--- a/SAO-EP/Src/Reports_1.fx.yaml
+++ b/SAO-EP/Src/Reports_1.fx.yaml
@@ -181,8 +181,10 @@
                             ZIndex: =4
 
                 Container13 As groupContainer.manualLayoutContainer:
+                    AlignInContainer: =AlignInContainer.Start
                     LayoutMinHeight: =100
                     LayoutMinWidth: =250
+                    Width: =Parent.Width
                     X: =165
                     Y: =385
                     ZIndex: =3
@@ -191,12 +193,82 @@
                         BorderStyle: =BorderStyle.Solid
                         DisplayMode: =DisplayMode.Edit
                         Fill: =RGBA(0, 0, 0, 0)
-                        Height: =366
+                        Height: =Parent.Height
                         Items: =Master_Data
-                        Width: =800
-                        X: =60
+                        Width: =Parent.Width
+                        X: =Parent.X
                         Y: =0
                         ZIndex: =2
+
+                        ID_Column1 As dataTableColumn.textualColumn:
+                            DisplayMode: =DisplayMode.Edit
+                            FieldDisplayName: ="ID"
+                            FieldName: ="ID"
+                            FieldVariantName: ="textualColumn"
+                            Height: =Parent.Height
+                            LayoutHeight: =Parent.Height
+                            Order: =1
+                            Text: =ThisItem.ID
+                            Width: =100
+                            X: =0
+                            Y: =0
+                            ZIndex: =11
+
+                        Title_Column1 As dataTableColumn.textualColumn:
+                            DisplayMode: =DisplayMode.Edit
+                            FieldDisplayName: ="Title"
+                            FieldName: ="Title"
+                            FieldVariantName: ="textualColumn"
+                            Height: =Parent.Height
+                            LayoutHeight: =Parent.Height
+                            Order: =2
+                            Text: =ThisItem.Title
+                            Width: =100
+                            X: =0
+                            Y: =0
+                            ZIndex: =12
+
+                        ActivityTitle_Column1 As dataTableColumn.textualColumn:
+                            DisplayMode: =DisplayMode.Edit
+                            FieldDisplayName: ="ActivityTitle"
+                            FieldName: ="ActivityTitle"
+                            FieldVariantName: ="textualColumn"
+                            Height: =Parent.Height
+                            LayoutHeight: =Parent.Height
+                            Order: =3
+                            Text: =ThisItem.ActivityTitle
+                            Width: =100
+                            X: =0
+                            Y: =0
+                            ZIndex: =13
+
+                        EventTypes_Column1 As dataTableColumn.textualColumn:
+                            DisplayMode: =DisplayMode.Edit
+                            FieldDisplayName: ="EventTypes"
+                            FieldName: ="EventTypes"
+                            FieldVariantName: ="textualColumn"
+                            Height: =Parent.Height
+                            LayoutHeight: =Parent.Height
+                            Order: =4
+                            Text: =ThisItem.EventTypes
+                            Width: =100
+                            X: =0
+                            Y: =0
+                            ZIndex: =14
+
+                        NameofLeadOrg_Column1 As dataTableColumn.textualColumn:
+                            DisplayMode: =DisplayMode.Edit
+                            FieldDisplayName: ="NameofLeadOrg"
+                            FieldName: ="NameofLeadOrg"
+                            FieldVariantName: ="textualColumn"
+                            Height: =Parent.Height
+                            LayoutHeight: =Parent.Height
+                            Order: =5
+                            Text: =ThisItem.NameofLeadOrg
+                            Width: =100
+                            X: =0
+                            Y: =0
+                            ZIndex: =15
 
                         CashAdvance_Column1 As dataTableColumn.textualColumn:
                             DisplayMode: =DisplayMode.Edit
@@ -205,18 +277,19 @@
                             FieldVariantName: ="textualColumn"
                             Height: =Parent.Height
                             LayoutHeight: =Parent.Height
-                            Order: =1
+                            Order: =6
                             Text: =ThisItem.CashAdvance
                             Width: =100
                             X: =0
                             Y: =0
-                            ZIndex: =11
+                            ZIndex: =16
 
             "'Right Container' As groupContainer.verticalAutoLayoutContainer":
                 DropShadow: =DropShadow.Regular
                 Fill: =RGBA(255, 255, 255, 1)
                 FillPortions: =0.5
                 LayoutAlignItems: =LayoutAlignItems.Center
+                LayoutDirection: =LayoutDirection.Vertical
                 LayoutGap: =5
                 LayoutJustifyContent: =LayoutJustifyContent.Center
                 LayoutMinHeight: =300
@@ -230,6 +303,7 @@
 
                 Container6_1 As groupContainer.manualLayoutContainer:
                     DropShadow: =DropShadow.Light
+                    FillPortions: =0.25
                     LayoutMinHeight: =100
                     LayoutMinWidth: =250
                     RadiusBottomLeft: =5
@@ -280,90 +354,8 @@
                             )
                         Width: =261
                         X: =84
-                        Y: =30
+                        Y: =48
                         ZIndex: =6
-
-                    "Gallery1 As gallery.'BrowseLayout_Vertical_TwoTextVariant_ver5.0'":
-                        DelayItemLoading: =true
-                        Height: =336
-                        Items: ='APF Uploads'
-                        Layout: =Layout.Vertical
-                        LoadingSpinner: =LoadingSpinner.Data
-                        TemplatePadding: =0
-                        TemplateSize: =90
-                        Width: =424
-                        X: =4
-                        Y: =150
-                        ZIndex: =6
-
-                        Title4 As label:
-                            BorderColor: =RGBA(0, 0, 0, 1)
-                            Color: =RGBA(71, 69, 64, 1)
-                            DisabledColor: =RGBA(186, 186, 186, 1)
-                            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                            Height: =Self.Size * 1.8
-                            OnSelect: =Select(Parent)
-                            PaddingBottom: =0
-                            PaddingLeft: =0
-                            PaddingRight: =0
-                            PaddingTop: =0
-                            Size: =14
-                            Text: =ThisItem.Title
-                            VerticalAlign: =VerticalAlign.Top
-                            Width: =Parent.TemplateWidth - 86
-                            X: =16
-                            Y: =(Parent.TemplateHeight - (Self.Size * 1.8 + Subtitle3.Size * 1.8)) / 2
-                            ZIndex: =1
-
-                        Subtitle3 As label:
-                            BorderColor: =RGBA(0, 0, 0, 1)
-                            Color: =RGBA(71, 69, 64, 1)
-                            DisabledColor: =RGBA(186, 186, 186, 1)
-                            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                            Height: =Self.Size * 1.8
-                            OnSelect: =Select(Parent)
-                            PaddingBottom: =0
-                            PaddingLeft: =0
-                            PaddingRight: =0
-                            PaddingTop: =0
-                            Text: =ThisItem.Title
-                            VerticalAlign: =VerticalAlign.Top
-                            Width: =Title4.Width
-                            X: =Title4.X
-                            Y: =Title4.Y + Title4.Height
-                            ZIndex: =2
-
-                        NextArrow3 As icon.ChevronRight:
-                            AccessibleLabel: =Self.Tooltip
-                            Color: =RGBA(166, 166, 166, 1)
-                            Height: =50
-                            Icon: =Icon.ChevronRight
-                            OnSelect: =Select(Parent)
-                            PaddingBottom: =16
-                            PaddingLeft: =16
-                            PaddingRight: =16
-                            PaddingTop: =16
-                            Tooltip: ="View item details"
-                            Width: =50
-                            X: =Parent.TemplateWidth - Self.Width - 12
-                            Y: =(Parent.TemplateHeight / 2) - (Self.Height / 2)
-                            ZIndex: =3
-
-                        Separator3 As rectangle:
-                            BorderColor: =RGBA(0, 0, 255, 1)
-                            Fill: =RGBA(255, 255, 255, 1)
-                            Height: =8
-                            OnSelect: =Select(Parent)
-                            Width: =Parent.TemplateWidth
-                            Y: =Parent.TemplateHeight - Self.Height
-                            ZIndex: =4
-
-                        Rectangle11 As rectangle:
-                            Height: =Parent.TemplateHeight - Separator3.Height
-                            OnSelect: =Select(Parent)
-                            Visible: =ThisItem.IsSelected
-                            Width: =4
-                            ZIndex: =5
 
                     ButtonCanvas2_1 As Button:
                         DisplayMode: =DisplayMode.Edit
@@ -401,7 +393,7 @@
                         Text: ="All"
                         Width: =54
                         X: =10
-                        Y: =30
+                        Y: =48
                         ZIndex: =7
 
                     Icon21_2 As icon.VerticalLine:
@@ -409,7 +401,7 @@
                         Icon: =Icon.VerticalLine
                         Width: =20
                         X: =64
-                        Y: =30
+                        Y: =48
                         ZIndex: =8
 
                     ButtonCanvas1_1 As Button:
@@ -422,7 +414,7 @@
                         Text: =
                         Width: =41
                         X: =365
-                        Y: =30
+                        Y: =48
                         ZIndex: =9
 
                     Icon21_3 As icon.VerticalLine:
@@ -430,8 +422,175 @@
                         Icon: =Icon.VerticalLine
                         Width: =20
                         X: =345
-                        Y: =30
+                        Y: =48
                         ZIndex: =10
+
+                Container6_2 As groupContainer.manualLayoutContainer:
+                    DropShadow: =DropShadow.Light
+                    LayoutMinHeight: =100
+                    LayoutMinWidth: =250
+                    RadiusBottomLeft: =5
+                    RadiusBottomRight: =5
+                    RadiusTopLeft: =5
+                    RadiusTopRight: =5
+                    Visible: =If(CurrentUser.userRoles.Id = 1, true, false)
+                    ZIndex: =6
+
+                    TextCanvas6 As Text:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =63
+                        Size: =30
+                        Text: |-
+                            ="Quick Stats:"
+                        Weight: ='TextCanvas.Weight'.Bold
+                        Width: =193
+                        X: =40
+                        Y: =59
+                        ZIndex: =1
+
+                    TextCanvas6_1 As Text:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =49
+                        Size: =20
+                        Text: |-
+                            ="Events Organized:"
+                        Weight: ='TextCanvas.Weight'.Semibold
+                        Width: =193
+                        X: =40
+                        Y: =144
+                        ZIndex: =2
+
+                    TextCanvas6_2 As Text:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =49
+                        Size: =20
+                        Text: |-
+                            ="Events Organized:"
+                        Weight: ='TextCanvas.Weight'.Semibold
+                        Width: =193
+                        X: =40
+                        Y: =193
+                        ZIndex: =3
+
+                    TextCanvas6_3 As Text:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =49
+                        Size: =20
+                        Text: |-
+                            ="Events Organized:"
+                        Weight: ='TextCanvas.Weight'.Semibold
+                        Width: =193
+                        X: =40
+                        Y: =242
+                        ZIndex: =4
+
+                    TextCanvas6_4 As Text:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =49
+                        Size: =20
+                        Text: |-
+                            ="Events Organized:"
+                        Weight: ='TextCanvas.Weight'.Semibold
+                        Width: =193
+                        X: =40
+                        Y: =291
+                        ZIndex: =5
+
+                    TextCanvas6_5 As Text:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =49
+                        Size: =20
+                        Text: |-
+                            ="Events Organized:"
+                        Weight: ='TextCanvas.Weight'.Semibold
+                        Width: =193
+                        X: =40
+                        Y: =340
+                        ZIndex: =6
+
+                    TextCanvas6_6 As Text:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =49
+                        Size: =20
+                        Text: |-
+                            ="Events Organized:"
+                        Weight: ='TextCanvas.Weight'.Semibold
+                        Width: =193
+                        X: =40
+                        Y: =389
+                        ZIndex: =7
+
+                    TextCanvas6_7 As Text:
+                        Align: ='TextCanvas.Align'.End
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =49
+                        Size: =20
+                        Text: =100
+                        Weight: ='TextCanvas.Weight'.Semibold
+                        Width: =98
+                        X: =286
+                        Y: =144
+                        ZIndex: =8
+
+                    TextCanvas6_8 As Text:
+                        Align: ='TextCanvas.Align'.End
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =49
+                        Size: =20
+                        Text: =100
+                        Weight: ='TextCanvas.Weight'.Semibold
+                        Width: =98
+                        X: =286
+                        Y: =193
+                        ZIndex: =9
+
+                    TextCanvas6_9 As Text:
+                        Align: ='TextCanvas.Align'.End
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =49
+                        Size: =20
+                        Text: =100
+                        Weight: ='TextCanvas.Weight'.Semibold
+                        Width: =98
+                        X: =286
+                        Y: =242
+                        ZIndex: =10
+
+                    TextCanvas6_10 As Text:
+                        Align: ='TextCanvas.Align'.End
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =49
+                        Size: =20
+                        Text: =100
+                        Weight: ='TextCanvas.Weight'.Semibold
+                        Width: =98
+                        X: =286
+                        Y: =291
+                        ZIndex: =11
+
+                    TextCanvas6_11 As Text:
+                        Align: ='TextCanvas.Align'.End
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =49
+                        Size: =20
+                        Text: =100
+                        Weight: ='TextCanvas.Weight'.Semibold
+                        Width: =98
+                        X: =286
+                        Y: =340
+                        ZIndex: =12
+
+                    TextCanvas6_12 As Text:
+                        Align: ='TextCanvas.Align'.End
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =49
+                        Size: =20
+                        Text: =100
+                        Weight: ='TextCanvas.Weight'.Semibold
+                        Width: =98
+                        X: =286
+                        Y: =389
+                        ZIndex: =13
 
     TSKBR_14 As TSKBR:
         NavigationItems: =gblNavItems
