--- a/SAO-EP/Src/Reports_1.fx.yaml
+++ b/SAO-EP/Src/Reports_1.fx.yaml
@@ -1058,10 +1058,11 @@
                         TemplateSize: =31
                         Width: =214
                         X: =34
-                        Y: =120
+                        Y: =132
                         ZIndex: =1
 
                         ChkBoxOrgNames As Checkbox:
+                            Checked: =SelectAllOrgChecked
                             DisplayMode: =DisplayMode.Edit
                             Height: =32
                             Label: =ThisItem.orgAcronym
@@ -1092,132 +1093,9 @@
                             ="Information: "
                         Weight: ='TextCanvas.Weight'.Semibold
                         Width: =148
-                        X: =248
-                        Y: =96
+                        X: =376
+                        Y: =108
                         ZIndex: =3
-
-                    ChkBox_EventID As Checkbox:
-                        DisplayMode: =DisplayMode.Edit
-                        Height: =32
-                        Label: ="Event ID"
-                        OnCheck: =false
-                        OnUncheck: =false
-                        Width: =160
-                        X: =249
-                        Y: =150
-                        ZIndex: =4
-
-                    ChkBox_ActTitle As Checkbox:
-                        DisplayMode: =DisplayMode.Edit
-                        Height: =32
-                        Label: ="Activity Title"
-                        OnCheck: =false
-                        OnUncheck: =false
-                        Width: =160
-                        X: =249
-                        Y: =188
-                        ZIndex: =5
-
-                    ChkBox_LeadOrg As Checkbox:
-                        DisplayMode: =DisplayMode.Edit
-                        Height: =32
-                        Label: ="Lead Org"
-                        OnCheck: =false
-                        OnUncheck: =false
-                        Width: =160
-                        X: =249
-                        Y: =226
-                        ZIndex: =6
-
-                    ChkBox_EventClass As Checkbox:
-                        DisplayMode: =DisplayMode.Edit
-                        Height: =36
-                        Label: ="Event Classification"
-                        OnCheck: =false
-                        OnUncheck: =false
-                        Width: =185
-                        X: =249
-                        Y: =260
-                        ZIndex: =7
-
-                    ChkBox_EventType As Checkbox:
-                        DisplayMode: =DisplayMode.Edit
-                        Height: =32
-                        Label: ="Event Type"
-                        OnCheck: =false
-                        OnUncheck: =false
-                        Width: =160
-                        X: =249
-                        Y: =296
-                        ZIndex: =8
-
-                    ChkBox_TDate As Checkbox:
-                        DisplayMode: =DisplayMode.Edit
-                        Height: =32
-                        Label: ="Target Date"
-                        OnCheck: =false
-                        OnUncheck: =false
-                        Width: =160
-                        X: =249
-                        Y: =334
-                        ZIndex: =9
-
-                    ChkBox_CoOrg As Checkbox:
-                        DisplayMode: =DisplayMode.Edit
-                        Height: =32
-                        Label: ="Co-organization "
-                        OnCheck: =false
-                        OnUncheck: =false
-                        Width: =160
-                        X: =473
-                        Y: =369
-                        ZIndex: =11
-
-                    ChkBox_PrimAud As Checkbox:
-                        DisplayMode: =DisplayMode.Edit
-                        Height: =32
-                        Label: ="Primary Audience"
-                        OnCheck: =false
-                        OnUncheck: =false
-                        Width: =177
-                        X: =473
-                        Y: =148
-                        ZIndex: =12
-
-                    ChkBox_TotalExp As Checkbox:
-                        DisplayMode: =DisplayMode.Edit
-                        Height: =32
-                        Label: ="Total Expenses"
-                        OnCheck: =false
-                        OnUncheck: =false
-                        Width: =177
-                        X: =473
-                        Y: =259
-                        ZIndex: =13
-
-                    ChkBox_Balance As Checkbox:
-                        DisplayMode: =DisplayMode.Edit
-                        Height: =32
-                        Label: |-
-                            ="
-                            Balance"
-                        OnCheck: =false
-                        OnUncheck: =false
-                        Width: =177
-                        X: =473
-                        Y: =294
-                        ZIndex: =14
-
-                    ChkBox_CPP As Checkbox:
-                        DisplayMode: =DisplayMode.Edit
-                        Height: =32
-                        Label: ="Cost per Participant"
-                        OnCheck: =false
-                        OnUncheck: =false
-                        Width: =177
-                        X: =473
-                        Y: =331
-                        ZIndex: =15
 
                     ButtonCanvas9_1 As Button:
                         DisplayMode: =DisplayMode.Edit
@@ -1238,21 +1116,24 @@
                                 ForAll(
                                     Master_Data,
                                     {
+                                        // Only create the column if the corresponding checkbox is checked
+                                        APFNum: APFU_ID_Num,
                                         NameofLeadOrg: If(ChkBoxOrgNames.Checked, NameofLeadOrg, Blank()),
                                         EventID: If(ChkBox_EventID.Checked, Title, Blank()),
                                         ActTitle: If(ChkBox_ActTitle.Checked, ActivityTitle, Blank()),
                                         LeadOrg: If(ChkBox_LeadOrg.Checked, NameofLeadOrg, Blank()),
-                                        EventClass: If(ChkBox_EventClass.Checked,EventTypes, Blank()),
-                                        //EventType: If(ChkBox_EventType.Checked,EventTypes, Blank()),
+                                        EventType: If(ChkBox_EventType.Checked, EventTypes, Blank()),
                                         TDate: If(ChkBox_TDate.Checked, Target_x0020_Date, Blank()),
                                         Venue: If(ChkBox_Venue.Checked, Venue_x002f_Platform, Blank()),
-                                        PrimAud: If(ChkBox_PrimAud.Checked, ProjectedPrimaryAudience, Blank()),
+                                        PrimAud: If(ChkBox_PrimAud.Checked,ProjectedPrimaryAudience, Blank()),
                                         SecAud: If(ChkBox_SecAud.Checked, ProjectedSecondaryAudience, Blank()),
-                                        Balance: If(ChkBox_Balance.Checked, Balance, Blank())
-                                        // Add more columns as needed with similar logic
+                                        Balance: If(ChkBox_Balance.Checked, Balance, Blank()),
+                                        CostPerParticipant: If(ChkBox_CPP.Checked, CostPerParticipant, Blank()),
+                                        CashAdv: If(ChkBox_CashAdv.Checked, CashAdvance, Blank()),
+                                        TotalExpenses: If(ChkBox_TotalExp.Checked, TotalExpensesValue, Blank())
                                     }
                                 )
-                            )
+                            );
                         Text: ="Preview Sample"
                         Width: =133
                         X: =532
@@ -1285,41 +1166,189 @@
                         Weight: ='TextCanvas.Weight'.Semibold
                         Width: =148
                         X: =48
-                        Y: =96
+                        Y: =108
                         ZIndex: =26
 
-                    ChkBox_SecAud As Checkbox:
+                    ButtonCanvas9_2 As Button:
+                        Appearance: ='ButtonCanvas.Appearance'.Outline
                         DisplayMode: =DisplayMode.Edit
-                        Height: =32
-                        Label: ="Secondary Audience"
-                        OnCheck: =false
-                        OnUncheck: =false
-                        Width: =177
-                        X: =473
-                        Y: =187
-                        ZIndex: =27
+                        Height: =26
+                        IconStyle: ='ButtonCanvas.IconStyle'.Outline
+                        OnSelect: |-
+                            =// OnSelect property of the Select All button
+                            UpdateContext({ SelectAllChecked: !SelectAllChecked });
+                        Text: ="Select All"
+                        Width: =86
+                        X: =687
+                        Y: =123
+                        ZIndex: =30
 
-                    ChkBox_CashAdv As Checkbox:
+                    ButtonCanvas9_3 As Button:
+                        Appearance: ='ButtonCanvas.Appearance'.Outline
                         DisplayMode: =DisplayMode.Edit
-                        Height: =32
-                        Label: ="Cash Advanced"
-                        OnCheck: =false
-                        OnUncheck: =false
-                        Width: =177
-                        X: =473
-                        Y: =225
-                        ZIndex: =28
+                        Height: =26
+                        IconStyle: ='ButtonCanvas.IconStyle'.Outline
+                        OnSelect: |-
+                            =// OnSelect property of the Select All button
+                            UpdateContext({ SelectAllOrgChecked: !SelectAllOrgChecked });
+                        Text: ="Select All"
+                        Width: =86
+                        X: =196
+                        Y: =123
+                        ZIndex: =31
 
-                    ChkBox_Venue As Checkbox:
-                        DisplayMode: =DisplayMode.Edit
-                        Height: =32
-                        Label: ="Venue"
-                        OnCheck: =false
-                        OnUncheck: =false
-                        Width: =160
-                        X: =249
-                        Y: =366
-                        ZIndex: =29
+                    Group8 As group:
+                        Height: =5
+                        Width: =5
+                        X: =40
+                        Y: =40
+                        ZIndex: =31
+
+                        ChkBox_EventID As Checkbox:
+                            Checked: =SelectAllChecked
+                            DisplayMode: =DisplayMode.Edit
+                            Height: =32
+                            Label: ="Event ID"
+                            OnCheck: =false
+                            OnUncheck: =false
+                            Width: =160
+                            X: =376
+                            Y: =164
+                            ZIndex: =4
+
+                        ChkBox_ActTitle As Checkbox:
+                            Checked: =SelectAllChecked
+                            DisplayMode: =DisplayMode.Edit
+                            Height: =32
+                            Label: ="Activity Title"
+                            OnCheck: =false
+                            OnUncheck: =false
+                            Width: =160
+                            X: =376
+                            Y: =202
+                            ZIndex: =5
+
+                        ChkBox_LeadOrg As Checkbox:
+                            Checked: =SelectAllChecked
+                            DisplayMode: =DisplayMode.Edit
+                            Height: =32
+                            Label: ="Lead Org"
+                            OnCheck: =false
+                            OnUncheck: =false
+                            Width: =160
+                            X: =376
+                            Y: =240
+                            ZIndex: =6
+
+                        ChkBox_EventType As Checkbox:
+                            Checked: =SelectAllChecked
+                            DisplayMode: =DisplayMode.Edit
+                            Height: =32
+                            Label: ="Event Type"
+                            OnCheck: =false
+                            OnUncheck: =false
+                            Width: =160
+                            X: =376
+                            Y: =275
+                            ZIndex: =8
+
+                        ChkBox_TDate As Checkbox:
+                            Checked: =SelectAllChecked
+                            DisplayMode: =DisplayMode.Edit
+                            Height: =32
+                            Label: ="Target Date"
+                            OnCheck: =false
+                            OnUncheck: =false
+                            Width: =160
+                            X: =376
+                            Y: =313
+                            ZIndex: =9
+
+                        ChkBox_PrimAud As Checkbox:
+                            Checked: =SelectAllChecked
+                            DisplayMode: =DisplayMode.Edit
+                            Height: =32
+                            Label: ="Primary Audience"
+                            OnCheck: =false
+                            OnUncheck: =false
+                            Width: =177
+                            X: =600
+                            Y: =162
+                            ZIndex: =12
+
+                        ChkBox_TotalExp As Checkbox:
+                            Checked: =SelectAllChecked
+                            DisplayMode: =DisplayMode.Edit
+                            Height: =32
+                            Label: ="Total Expenses"
+                            OnCheck: =false
+                            OnUncheck: =false
+                            Width: =177
+                            X: =600
+                            Y: =273
+                            ZIndex: =13
+
+                        ChkBox_Balance As Checkbox:
+                            Checked: =SelectAllChecked
+                            DisplayMode: =DisplayMode.Edit
+                            Height: =32
+                            Label: |-
+                                ="
+                                Balance"
+                            OnCheck: =false
+                            OnUncheck: =false
+                            Width: =177
+                            X: =600
+                            Y: =308
+                            ZIndex: =14
+
+                        ChkBox_CPP As Checkbox:
+                            Checked: =SelectAllChecked
+                            DisplayMode: =DisplayMode.Edit
+                            Height: =32
+                            Label: ="Cost per Participant"
+                            OnCheck: =false
+                            OnUncheck: =false
+                            Width: =177
+                            X: =600
+                            Y: =345
+                            ZIndex: =15
+
+                        ChkBox_SecAud As Checkbox:
+                            Checked: =SelectAllChecked
+                            DisplayMode: =DisplayMode.Edit
+                            Height: =32
+                            Label: ="Secondary Audience"
+                            OnCheck: =false
+                            OnUncheck: =false
+                            Width: =177
+                            X: =600
+                            Y: =201
+                            ZIndex: =27
+
+                        ChkBox_CashAdv As Checkbox:
+                            Checked: =SelectAllChecked
+                            DisplayMode: =DisplayMode.Edit
+                            Height: =32
+                            Label: ="Cash Advanced"
+                            OnCheck: =false
+                            OnUncheck: =false
+                            Width: =177
+                            X: =600
+                            Y: =239
+                            ZIndex: =28
+
+                        ChkBox_Venue As Checkbox:
+                            Checked: =SelectAllChecked
+                            DisplayMode: =DisplayMode.Edit
+                            Height: =32
+                            Label: ="Venue"
+                            OnCheck: =false
+                            OnUncheck: =false
+                            Width: =160
+                            X: =376
+                            Y: =345
+                            ZIndex: =29
 
             "'Right Container' As groupContainer.verticalAutoLayoutContainer":
                 DropShadow: =DropShadow.Regular
